<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="219dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sevenBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_seven"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eightBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_eight"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nineBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_nine"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_division"
                android:textSize="24sp"
                android:background="@drawable/circle"
                android:backgroundTint="#FF0000"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fourBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_four"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fiveBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_five"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sixBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_six"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_sum"
                android:layout_margin="5dp"
                android:backgroundTint="#FF0000"
                android:textSize="24sp"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/oneBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_one"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/twoBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_two"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/threeBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_three"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button10"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_minus"
                android:layout_margin="5dp"
                android:backgroundTint="#FF0000"
                android:textSize="24sp"
                android:background="@drawable/circle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button16"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/btn_signal_changer"
                android:layout_margin="5dp"
                android:textSize="24sp"
                android:background="@drawable/circle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zeroBtn"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="numberButtonClicked"
                android:text="@string/btn_zero"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button21"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_dot"
                android:textSize="24sp"
                android:background="@drawable/circle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_equal"
                style="?android:borderlessButtonStyle"
                android:background="@drawable/circle"
                android:textSize="24sp"
                android:backgroundTint="#FFFF00" />

        </TableRow>
    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button15"
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:backgroundTint="#00FFFF"
        android:onClick="clear"
        android:text="@string/btn_clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button14"
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/btn_clear_all"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="1.0"
        android:background="@drawable/circle"
        android:backgroundTint="#00FFFF"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/enter_a_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="36sp"
        android:importantForAutofill="no"
        android:inputType="none"
        tools:ignore="LabelFor"
        android:textAlignment="textEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>